--- a/static/styles/components/btn.css
+++ b/static/styles/components/btn.css
@@ -1,13 +1,35 @@
 /* ======================= Global button ======================= */
 .btn {
-    border-radius: var(--bdrs-round);
-    background: var(--color-bg);
+    background: var(--color-primary);
     color: var(--color-bg);
     font-size: var(--fz-md);
-    font-weight: var(--fw-regular);
+    padding: 5px 15px;
+    transition: background .2s ease-in, color .2s ease-in;
+    outline: 1px solid var(--color-primary);
+    position: relative;
+}
+.btn:hover {
+    background: var(--color-bg);
+    color: var(--color-primary);
 }
 
 /* ======================= Pill buttom ======================= */
+.btn--pill {
+    background: var(--color-bg);
+    border-radius: var(--bdrs-round);
+    color: var(--color-text);
+    outline-color: transparent;
+    overflow: hidden;
+    z-index: 0;
+}
 
+.btn--pill.active {
+    background: var(--color-primary);
+    color: var(--color-bg);
+    outline: none;
+}
 
 /* ======================= Action button ======================= */
+
+
+
