--- a/static/styles/settings/variables.css
+++ b/static/styles/settings/variables.css
@@ -1,10 +1,14 @@
 :root {
     /* Color */
     --color-primary: #56DF9F;
-    --color-secondary: #333;
+    --color-primary-light: #a8f3d0;
+    --color-primary-dark: rgb(33, 219, 132);
+    --color-secondary: #007BFF;
+    --color-secondary-dark: #005fc5;
     --color-bg: #F6F5FB;
+    --color-bg-dark: #e9e9e9;
     --color-text: #333;
-    --color-text-light: #333;
+    --color-text-light: #494949;
 
     /* Typography */
     
@@ -34,7 +38,7 @@
     /* Specific variables CARD */
     --bdrs-card: 5px; 
     --color-bg-card: #333;
-    --pd-card: 2.5rem;
+    --pd-card: 2.5rem ;
     
     /* Specific variables FORM */
     --bdrs-form--input: 40px;
