--- a/static/styles/components/btn.css
+++ b/static/styles/components/btn.css
@@ -55,11 +55,36 @@
 
 
 /* ======================= Action button ======================= */
+.btn--action {
+    border-radius: var(--bdrs-round);
+    padding: 15px 70px;
+}
 
 
 
 
+/* ======================= Button Hamb ======================= */
+.btn_hamb {
+    height: 50px;
+    width: 50px;
+    position: relative;
+    cursor: pointer;
+}
 
-/* ======================= Button effect ======================= */
+.btn_hamb .line {
+    width: 100%;
+    height: 4px;
+    background: var(--color-text);
+    position: absolute;
+}
 
-
+.btn_hamb .l_2 {
+    top: 50%;
+    transform: translateY(-50%);
+   }
+   .btn_hamb .l_3 {
+bottom: 0;
+   }
+   .btn_hamb .l_1 {
+        top: 0;
+   }
