--- a/static/styles/utilities/display.css
+++ b/static/styles/utilities/display.css
@@ -20,3 +20,29 @@
 .d-none {
     display: none;
 }
+
+.w-100 {
+    width: 100%;
+}
+.w-50 {
+    width: 50%;
+}
+.w-25 {
+    width: 25%;
+}
+.w-0 {
+    width: 0;
+}
+
+.h-100 {
+    height: 100%;
+}
+.h-50 {
+    height: 50%;
+}
+.h-25 {
+    height: 25%;
+}
+.h-0 {
+    height: 0;
+}
